# simple-choice-choice-voting-app

./: .env.example  README.md  helpers.py  main.py  pyproject.toml
