[tool.poetry]
name = "simple-choice-choice-voting-app"
version = "0.1.0"
description = ""
authors = ["Isaac Adewumi <ienioladewumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
py-algorand-sdk = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
